# opus_fold

./: README.md  combine_fasta.txt  compile.sh
constrains_files/contact_maps_combine/: 1a19.cm
constrains_files/contact_maps_raptorx/: 1a19.contactmap.txt
constrains_files/contact_maps_spotcon/: 1a19.spotcon
constrains_files/torsion_angles/: 1a19.spot1d
other_potentials/: readme
src/: CMakeLists.txt  opus_fold.cpp  opus_fold.ini
src/algorithm/: genetic_algorithm.cpp  genetic_algorithm.h  multi_threads.cpp  multi_threads.h  myutils.cpp  myutils.h  side_chain_modeling.cpp  side_chain_modeling.h
src/buildprotein/: angle.cpp  angle.h  geometry.cpp  geometry.h  peptideBuilder.cpp  peptideBuilder.h
src/database/: mongo.cpp  mongo.h
src/myclass/: atom.cpp  atom.h  basic.cpp  basic.h  residue.cpp  residue.h
src/myio/: config.cpp  config.h  pdb.cpp  pdb.h
src/potential/: CSFScore.cpp  CSFScore.h  DASFScore.cpp  DASFScore.h  LJPotential.cpp  LJPotential.h  contact_map_constraint.cpp  contact_map_constraint.h  init_structure_constraint.cpp  init_structure_constraint.h  mkdssp.h  other_potentials.cpp  other_potentials.h  theta_tau_constraint.cpp  theta_tau_constraint.h  torsion_angles_constraint.cpp  torsion_angles_constraint.h
tmp_structures/: andis_list.txt  tmp.txt
